<resources>
    <string name="app_name">Editorium</string>

    <string name="imgResolution">%d x %d px</string>
    <string name="preview">ПРЕДПРОСМОТР</string>
    <string name="sigma">sigma</string>
    <string name="coefficient">coefficient</string>
    <string name="doAlgorithm">Применить</string>
    <string name="numScale">1</string>
    <string name="numRotate">0</string>
    <string name="radius">radius</string>
    <string name="find">Обнаружить</string>
    <string name="startPoints">Начальные</string>
    <string name="place">Ставьте</string>
    <string name="endPoints">Конечные</string>
    <string name="changeImg">Преобразовать</string>
    <string name="makePhoto">Сделать фото</string>
    <string name="fromGallery">Загрузить из галереи</string>
    <string name="placeAllPoint">Поставьте все точки</string>
    <string name="undo">Отменить</string>
    <string name="redo">Вернуть</string>
    <string name="save">Сохранить</string>
    <string name="apply">Применить</string>
    <string name="writePermissionRationale">Для сохранения фото необходимо разрешение на запись файлов</string>
    <string name="writePermissionRationaleBlocked">Для сохранения фото необходимо разрешение на запись файлов, пожалуйста включите его в информации о приложении</string>
    <string name="selectPoint">выбрать точку</string>

</resources>